chore: make the pipeline more runtime-agnostic
Signed-off-by: Dima Denisenko <1253839+dmitriidenisenko@users.noreply.github.com>